# farm-stack

./: .gitignore
backend-fastapi/: .env  main.py  pyproject.toml  requirements.txt
backend-fastapi/apps/server/models/: helper.py  student.py
backend-fastapi/config/: database.py
backend-fastapi/models/: student.py  user.py
backend-fastapi/routes/: student.py  user.py
backend-fastapi/schemas/: student.py  user.py
backend-gin/: .env  go.mod  go.sum  main.go
creative/: build.gradle  settings.gradle
creative/src/main/java/com/blog/creative/: CreativeApplication.java  Employee.java
creative/src/test/java/com/blog/creative/: CreativeApplicationTests.java
ui/: .gitignore  package-lock.json  package.json
ui/src/app/: error.jsx  globals.css  layout.js  page.js  page.module.css
ui/src/app/about/: about.module.css  page.jsx
ui/src/app/blog/: blog.module.css  page.jsx
ui/src/app/blog/[slug]/: page.jsx  singlepost.module.css
ui/src/app/contact/: contact.module.css  page.jsx
ui/src/components/footer/: Footer.jsx  footer.module.css
ui/src/components/navbar/: Navbar.jsx  navbar.module.css
ui/src/components/navbar/links/: Links.jsx  links.module.css
ui/src/components/navbar/links/navLink/: NavLink.jsx
ui/src/components/postcard/: PostCard.jsx  postcard.module.css
ui/src/components/postuser/: PostUser.jsx  postuser.module.css
ui/src/lib/: data.js  models.js  utils.js
